[package]
name = "cs4850-final-project"
version = "0.1.0"
authors = ["Nelson Earle <nelson.earle137@gmail.com>"]
edition = "2018"

[dependencies]
colored = "2.0"
dotenv = "0.15"
libc = "0.2"
num-traits = "0.2"
regex = "1.5"
signal-hook = { version = "0.3", default-features = false }
thiserror = "1.0"
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = "0.2"

[features]
quiet = ["tracing/max_level_debug"]

[lib]
name = "libchat"
path = "src/libchat/lib.rs"

[[bin]]
name = "chat-client"
path = "src/chat-client/main.rs"

[[bin]]
name = "chat-server"
path = "src/chat-server/main.rs"
